<resources>
    <string name="app_name">DATAGAMES</string>
    <string name="title2">In our menu you will find an infinite number of buttons that will make it easier for you to navigate through the app.</string>
    <string name="title3">Welcome</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="video_games">VideoGames</string>
    <string name="new_games">New Games</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="list_games">List Games</string>
    <string name="ok">OK</string>
    <string name="rating">Rating</string>
    <string name="plataformas">Platforms</string>
    <string name="generos">Genres</string>
    <string name="data_games">DATA GAMES</string>
    <string name="acercadeDES">Aplicación creada por Juan Antonio Barrero, Noelia Pérez y Rubén García para el Trabajo Final de Grado de Desarrollo de Aplicaciones Multiplataforma.</string>
    <string name="data">DATA</string>
    <string name="games">GAMES</string>
    <string name="videojuegos">Videogames</string>
    <string name="tiendas">Store</string>
    <string name="mapa">Map</string>
    <string name="fav_menu">Favourites</string>
    <string name="perfil">Profile</string>
    <string name="acerca_de">About us</string>
    <string name="since_2020">SINCE 2020</string>
    <string name="password_recovery">PASSWORD RECOVERY</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_mail_com">email@mail.com</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="welcome">Welcome</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="emailuser">EmailUser</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="save">SAVE</string>
    <string name="your_email">Enter Your NEW Email</string>
    <string name="your_pass">Enter Your NEW Password</string>
    <string name="your_username">Enter Your NEW UserName</string>
    <string name="fra2tit1">Entering the videogames section you can find the recently released videogames</string>
    <string name="fra2tit2">As well as those about to come out and all the video games we currently have</string>
    <string name="fra3tit1">You can choose how you want to buy/view your video games, in a physical shop</string>
    <string name="fra3tit2">As you can also find them in the online platforms that we offer</string>


    <string-array name="sp_generos">
        <item>Action</item>
        <item>Shooter</item>
        <item>Puzzle</item>
        <item>Adventure</item>
        <item>RPG</item>
        <item>Indie</item>
        <item>Platformer</item>
        <item>Racing</item>
        <item>Family</item>
    </string-array>

    <string-array name="sp_rating">
        <item>0.0</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>5.0</item>
    </string-array>

    <string-array name="sp_plataformas">
        <item>PlayStation 5</item>
        <item>PlayStation 4</item>
        <item>PlayStation 3</item>
        <item>Xbox Series S/X</item>
        <item>Xbox One</item>
        <item>Xbox 360</item>
        <item>Nintendo Switch</item>
        <item>Nintendo DS</item>
        <item>Nintendo 3DS</item>
        <item>PC</item>
        <item>Wii</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="metacritic">Metacritic</string>
    <string name="video">Video</string>
    <string name="description">Description</string>
    <string name="departure">Departure</string>
    <string name="genre">Genre</string>
    <string name="image">Image</string>
    <string name="website">Website</string>
    <string name="filtros">FILTERS</string>
    <string name="guardar_cambios">SAVE CHANGES</string>
    <string name="restaurar">RESTORE</string>
    <string name="videogames">VideoGames</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>

</resources>