<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_login_btn_sheet"
    android:orientation="vertical"
    android:padding="20dp"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/log_in_to_your_account"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/text_useremaillog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/emailuser"
        android:padding="12.5dp"
        android:textColorHint="@color/colorLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/colorLogin">

        <EditText
            android:id="@+id/text_passwordlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/password"
            android:padding="12.5dp"
            android:inputType="textPassword"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_login_btn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/text_sendResetPassword"/>
</LinearLayout>