<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ThirdFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_capa" />

    <TextView
        android:id="@+id/title0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/data"
        android:fontFamily="monospace"
        android:textColor="@color/logoNegro"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/title1"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/games"
        android:textColor="@color/logoNegro"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/title3"
        android:textColor="@color/logoNegro"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btnLogin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginEnd="100dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/shape_login_btn"
            android:text="@string/login"
            android:textColor="@color/logoNegro"
            android:layout_gravity="center"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btnRegistrer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_weight="1"
            android:textColor="@color/logoNegro"
            android:textAllCaps="false"
            android:background="@drawable/shape_registrer_btn"
            android:text="@string/register"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/slideOneBack2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="3"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>