<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FourFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_capa" />

    <TextView
        android:id="@+id/title0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/data"
        android:textColor="@color/logoNegro"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/games"
        android:textColor="@color/logoNegro"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/title3"
        android:textColor="@color/logoNegro"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login_btn"
            android:padding="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/logoNegro" />

        <Button
            android:id="@+id/btnRegistrer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_registrer_btn"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/logoNegro" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideOneBack4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="3"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>