<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ResetPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/password_recovery"
        android:textColor="@color/colorBlack"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_your_email_address"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email_mail_com"
            android:textColor="#1B1919"
            android:textColorHint="#A3A0A0"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLogin"
            android:text="@string/reset_password"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>