<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorStore"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="294dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/store" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/title2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp" />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18dp"
        android:textColor="@color/colorGame"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView

            android:id="@+id/slideOneBack1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp" />
        <TextView

            android:id="@+id/slideOneNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp" />


    </LinearLayout>




</LinearLayout>