<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    android:background="@drawable/shape_login_btn_sheet"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/darker_gray"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/text_usernamereg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_edit_text"
        android:hint="UserName"
        android:padding="12.5dp"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/text_mailreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Mail"
        android:padding="12.5dp"
        android:textColorHint="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/text_passwordreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_edit_text"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="12.5dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistrer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_registrer_btn"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>

