<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.datagames.GameList">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@id/toolbar"
                layout="@layout/toolbar" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/bungee"
                            android:text="@string/videogames"
                            android:textColor="@color/colorBlack"
                            android:textSize="30sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="271dp"
                            android:layout_marginBottom="55dp">

                        </androidx.recyclerview.widget.RecyclerView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bungee"
                            android:gravity="center"
                            android:text="@string/new_games"
                            android:textAllCaps="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />


                        <LinearLayout
                            android:id="@+id/listanewgames"
                            android:layout_width="match_parent"
                            android:layout_height="335dp"
                            android:layout_gravity="center"
                            android:padding="20dp">


                            <ListView
                                android:id="@+id/recicler"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/bungee"
                            android:gravity="center"
                            android:text="@string/upcoming_games"
                            android:textAllCaps="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:id="@+id/listaupcomiggames"
                            android:layout_width="match_parent"
                            android:layout_height="335dp"
                            android:layout_gravity="center"
                            android:padding="20dp">


                            <ListView
                                android:id="@+id/upcoming"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/bungee"
                            android:gravity="center"
                            android:text="@string/list_games"
                            android:textAllCaps="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:id="@+id/listagames"
                            android:layout_width="match_parent"
                            android:layout_height="550dp"
                            android:layout_gravity="center"
                            android:padding="20dp">


                            <ListView
                                android:id="@+id/list_notify"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:theme="@style/navigationTheme"
            app:headerLayout="@layout/header_navigation_drawer"
            app:menu="@menu/nav_options"></com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>
